--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+    implementation 'commons-io:commons-io:2.15.1'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+
+
 }
 
 test {
